# schedule_bot

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh  cppcheck.sh  install_dependencies.sh  schedule_bot.pro
config/: code_style.astylerc
src/: event.cpp  main.cpp  notifies.cpp  report_system.cpp  sch_bot.cpp  sch_bot.h  schedule.cpp  user.cpp
src/include/: defaults.h  event.h  notifies.h  report_system.h  sch_bot.h  schedule.h  user.h  utils.h
token/: token.h
